Atualização de links sociais e n° de telefones

--- a/index.html
+++ b/index.html
@@ -539,19 +539,20 @@ logged_out_greeting="Olá! Como podemos ajuda-lo?">
                     </div><br>
                     <div class="d-block d-sm-inline-block">
                         <p class="mb-0">
-                            <span class="ti-headphone-alt mr-2"></span> <a href="tel:5561999486774">(61) 9 9948-6774</a>
+                            <span class="ti-headphone-alt mr-2"></span> <a href="tel:5561996089095">(61) 9 9608-9095</a>
                         </p>
                     </div>
 
                 </div>
                 <div class="col-lg-6">
                     <div class="social-icons">
-                        <a href="#"><span class="ti-facebook"></span></a>
+                        <a target="_blank" href="https://www.facebook.com/pocketstudio.com.br"><span class="ti-facebook"></span></a>
                         <!--a href="#"><span class="ti-twitter-alt"></span></a-->
-                        <a href="#"><span class="ti-instagram"></span></a>
+                        <a target="_blank" href="https://www.instagram.com/pocketstudio.com.br/"><span class="ti-instagram"></span></a>
                         <a href="#"><span class="ti-skype"></span></a>
-                        <a href="#"><span class="ti-linkedin"></span></a>
-                        <a href="#"><span class="ti-github"></span></a>
+                        <a target="_blank" href="https://www.linkedin.com/company/pocket-io/"><span class="ti-linkedin"></span></a>
+                        <a target="_blank" href="https://github.com/Pocket-Studio/"><span class="ti-github"></span></a>
+                        <a target="_blank" href="https://wa.me/5561996089095"><img src="./images/icon-whatsApp.png" alt="WHATSAPP" srcset="" width="32" height="32" /></a>
                     </div>
                 </div>
             </div>
@@ -563,7 +564,7 @@ logged_out_greeting="Olá! Como podemos ajuda-lo?">
     <!-- // end .section -->
     <footer class="text-center" style="background: #000; height: 200px; display: flex; flex-direction: column; padding: 0!important; align-items: center; justify-content: center; color: #fff;">
         <strong> Este site está em desenvolvimento. Agradecemos a compreensão! </strong><br>
-        <strong> COPYRIGHT © 2020 POCKET STUDIO. TODOS OS DIREITOS RESERVADOS </strong>
+        <strong> COPYRIGHT © 2020 - 2021 POCKET STUDIO - TODOS OS DIREITOS RESERVADOS </strong>
         <small>As marcas e imagens encontradas aqui pertencem a seus respectivos donos</small>
     </footer>
 
