Metadescriptions, opengraph image e title

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Pocket Studio - Desenvolvimento de aplicações</title>
 
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178411741-1"></script>
 <script>
@@ -17,12 +18,18 @@
 
 
 
-    <!-- Required meta tags -->
+   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Pocket Studio - Desenvolvimento de aplicações">    
     <meta name="robots" content= "index, follow, noarchive, max-snippet:-1, noimageindex">
-    
+    <meta property="og:image" content="./images/logos/logo-website-darkbg.png" />
+    <meta property="og:title" content="Desenvolvimento de aplicações" />
+    <!-- <meta name="description" content="Desenvolvimento de Aplicações em geral.  -->
+    <!-- De simples Websites à Aplicativos complexos, E-commerce, Softwares, e mais. "> -->
+
+   
+   
     <link rel="shortcut icon" href="./res/images/icons/p-favicon.png"/>
     <!-- Font -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -65,9 +72,9 @@
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="106528274553258"
-theme_color="#12f8af"
+theme_color="#12f8afcc"
 logged_in_greeting="Olá! Como podemos ajuda-lo?"
-logged_out_greeting="Olá! Como podemos ajuda-lo?">
+logged_out_greeting="Olá! Como podemos ajuda-lo? Percebemos que você não está logado no facebook, recomendamos fazer login para ser notificado quando respondermos.">
 </div>
 
 <!-- //FACEBOOK MESSENGER -->
@@ -75,6 +82,7 @@ logged_out_greeting="Olá! Como podemos ajuda-lo?">
     <!-- Nav Menu -->
 
     <div class="nav-menu fixed-top">
+        <!-- <img src="./images/logos/logo-website-darkbg.png" alt="" srcset=""> -->
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
