--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="106528274553258"
-theme_color="#12f8afcc"
+theme_color="#12f8af"
 logged_in_greeting="Olá! Como podemos ajuda-lo?"
 logged_out_greeting="Olá! Como podemos ajuda-lo? Percebemos que você não está logado no facebook, recomendamos fazer login para ser notificado quando respondermos.">
 </div>
