--- a/screensaver/index.html
+++ b/screensaver/index.html
@@ -54,6 +54,15 @@
     }
 
 
+    @media screen and (max-width: 768px) {
+        h1 {
+            font-size: 3rem;
+        background: rgba(0, 0, 0, .1);
+
+        }
+    }
+
+
 
 </style>
 
