--- a/screensaver/index.html
+++ b/screensaver/index.html
@@ -7,7 +7,7 @@
 
 
     <script src="./js/three.min.js"></script>
-    <title>Three</title>
+    <title>Pocket Studio</title>
 </head>
 <body>
     <div id='pocketstudio'>        
