--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <meta property="og:image" content="./images/logos/logo-website-darkbg.png" />
     <meta property="og:title" content="Desenvolvimento de aplicações" />
     <!-- <meta name="description" content="Desenvolvimento de Aplicações em geral.  -->
+
+    <!-- Metatag facebook -->
+    <meta name="facebook-domain-verification" content="4hj1lf87e0glmxckte48yep8xlu76o" />
     <!-- De simples Websites à Aplicativos complexos, E-commerce, Softwares, e mais. "> -->
 
    
