--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Pocket Studio - Desenvolvimento de aplicações</title>
 
-
+    <!-- Erick -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178411741-1"></script>
 <script>
